--- a/cfg/collector/nginx.conf
+++ b/cfg/collector/nginx.conf
@@ -31,15 +31,10 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-    upstream snowplow {
-        keepalive 32; # keepalive connections
-        server 127.0.0.1:8080; # snowplow ip and port
-    }
-
     server {
         listen       80;
         listen       [::]:80;
-        server_name  snowplow.patrick-cloud.com;
+        server_name  snowplow-collector.patrick-cloud.com;
 
         # Redirect any non-health checks to https
         location / {
@@ -50,7 +45,7 @@ http {
     server {
 
         listen 443 ssl;
-        server_name snowplow.patrick-cloud.com;
+        server_name snowplow-collector.patrick-cloud.com;
 
         # Set root where index.html is found
         root /usr/share/nginx/html;
@@ -68,33 +63,22 @@ http {
         error_log             /var/log/nginx/ssl/error.log;
 
         # Set up a path sepcifically for Nginx homepage(Just to physically show Nginx)
-        location = /collector/index.html {
+        location = /index.html {
                 try_files $uri $uri/index.html index.html;
         }
 
-        location = /collector/health {
+        location = /health {
             proxy_set_header Host \$host;
             proxy_set_header X-Real-IP \$remote_addr;
             proxy_pass http://0.0.0.0:8080/health;
-        }
-
-        location /collector {
-            proxy_set_header Host \$host;
-            proxy_set_header X-Real-IP \$remote_addr;
-            proxy_pass http://0.0.0.0:8080;
         }
 
         location / {
             # Set the proxy headers
             proxy_set_header        Host \$host;
             proxy_set_header        X-Real-IP \$remote_addr;
-            proxy_set_header        X-Forwarded-For \$proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto \$scheme;
-
-            # Configure which address the request is proxied to
-            proxy_pass          http://snowplow;
+            proxy_pass          http://0.0.0.0:8080/$uri;
             proxy_read_timeout  90;
-            proxy_redirect      default;
 
             # Security headers
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
